pp and symbols.svg fix

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -1,4 +1,3 @@
-@import "blocks/btn.less";
 @import "global/variables.less";
 @import "global/fonts.less";
 @import "global/common.less";
@@ -16,6 +15,15 @@
 
 @import "blocks/events.less";
 @import "blocks/event.less";
+
+@import "blocks/pp.less";
+@import "blocks/x-btn.less";
+@import "blocks/radio.less";
+@import "blocks/field.less";
+@import "blocks/form.less";
+@import "blocks/check.less"; 
+
+@import "blocks/content.less";
 
 @import "blocks/page-header.less";
 @import "blocks/main-header.less";
