--- a/styles/styles.css
+++ b/styles/styles.css
@@ -61,6 +61,7 @@ body {
   width: 100%;
   text-align: center;
   background-color: #1F1E1E;
+  text-transform: uppercase;
   font-family: Lora;
   font-size: 36px;
   font-style: normal;
@@ -76,25 +77,6 @@ img {
   height: auto;
   -o-object-fit: cover;
      object-fit: cover;
-}
-input,
-textarea,
-button,
-select {
-  -webkit-box-shadow: none;
-          box-shadow: none;
-  outline: none;
-  color: #1f1e1e;
-  font-family: "Open Sans", sans-serif;
-}
-button {
-  cursor: pointer;
-}
-.width_624 {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  width: 100%;
-  max-width: 624px;
 }
 .display-none {
   display: none;
@@ -145,8 +127,6 @@ button {
 .section-title {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  width: 100%;
-  max-width: 624px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -156,6 +136,8 @@ button {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  width: 100%;
+  max-width: 624px;
   min-height: 62px;
   margin: 0 auto 150px;
   padding: 8px 45px;
@@ -320,26 +302,9 @@ button {
   grid-template-columns: 405px calc(89% - 405px);
   grid-template-areas: "checks scheme" "order legend";
   width: 100%;
-  max-width: 1414px;
 }
 .reserve__checks {
   grid-area: checks;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-}
-.reserve__check {
-  margin-bottom: 11px;
-}
-.reserve__check:last-child {
-  margin-bottom: 0;
 }
 .reserve__order {
   grid-area: order;
@@ -347,222 +312,12 @@ button {
 .reserve__scheme {
   grid-area: scheme;
 }
-.reserve__legend {
-  grid-area: legend;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
-  text-align: right;
-}
-.reserve__scheme-title {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin: 0 0 40px;
-  width: 100%;
-  max-width: 162px;
-  min-height: 34px;
-  background-color: #1f1e1e;
-  font-family: "Open Sans", sans-serif;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: normal;
-  color: #ffffff;
-}
-.reserve__section-title {
-  margin: 0 0 20px;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 25px;
-}
-.reserve__section-title--mb30 {
-  margin-bottom: 30px;
-}
-.reserve__qty::after {
-  content: " " attr(data-caption) " | " attr(data-price) " " attr(data-currency);
-}
-.reserve__sum {
-  font-size: 18px;
-  font-weight: 600;
-}
-.reserve__sum::after {
-  content: "";
-  margin-left: 4px;
-  font-size: 0.95em;
-}
-.reserve__total {
-  margin: 25px 0 0;
+.reserve > div {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 10px;
+  background-color: coral;
   text-align: center;
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 600;
-}
-.reserve__total::before {
-  content: attr(data-caption);
-  margin-right: 33.33px;
-}
-.reserve__total::after {
-  content: "";
-  margin-left: 4px;
-  font-size: 0.95em;
-}
-.reserve__scheme-wrapper {
-  position: relative;
-  width: 100%;
-}
-.reserve__scheme-wrapper::after {
-  content: "";
-  display: block;
-  width: 100%;
-  padding-top: 51.15384%;
-}
-.reserve__submit {
-  margin-top: 53px;
-  width: 100%;
-}
-.reserve__tickets {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin: 0 0 15px;
-}
-.reserve__tickets:last-child {
-  margin-bottom: 0;
-}
-.reserve__scene {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-.reserve__scheme-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-.reserve__price {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
-  margin-bottom: 35px;
-}
-.reserve__price-item {
-  padding-top: 2px;
-  position: relative;
-  min-height: 24px;
-  margin-bottom: 15px;
-  padding-left: 34px;
-  font-size: 14px;
-  line-height: 19px;
-}
-.reserve__price-item::before {
-  content: "";
-  display: block;
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 24px;
-  height: 24px;
-  background-color: #1f1e1e;
-}
-.reserve__price-item::after {
-  content: attr(data-caption);
-}
-.reserve__price-item--red::before {
-  background-color: #bc3324;
-}
-.reserve__price-item:last-child {
-  margin-bottom: 0;
-}
-.reserve__notation {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
-}
-.reserve__note {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  position: relative;
-  min-height: 24px;
-  margin-bottom: 13px;
-  padding-left: 54px;
-  padding-bottom: 2px;
-  font-size: 14px;
-  line-height: 19px;
-}
-.reserve__note--free::before,
-.reserve__note--free::after {
-  content: "";
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  display: block;
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 24px;
-  height: 24px;
-  border: 1px solid #1f1e1e;
-  border-radius: 50%;
-}
-.reserve__note--free::after {
-  border-color: #bc3324;
-  left: 12px;
-}
-.reserve__note--booked::before {
-  content: "";
-  display: block;
-  position: absolute;
-  left: 6px;
-  top: 0;
-  width: 24px;
-  height: 24px;
-  background-color: #bfbfbf;
-  border-radius: 50%;
-}
-.reserve__note:last-child {
-  margin-bottom: 0;
 }
 .events {
   padding: 140px 0 100px;
@@ -1472,11 +1227,6 @@ button {
 .link__icon {
   cursor: pointer;
 }
-.link__reverse {
-  -webkit-transform: rotate(180deg);
-      -ms-transform: rotate(180deg);
-          transform: rotate(180deg);
-}
 .subscribe__title {
   margin: 0 0 24px;
   font-weight: 600;
@@ -1957,12 +1707,6 @@ button {
   padding-left: 40px;
   padding-right: 40px;
 }
-.tariff__title {
-  font-size: 22px;
-  font-style: normal;
-  font-weight: 400;
-  letter-spacing: 0.44px;
-}
 .tariff__description {
   margin: 0 0 60px;
   width: 100%;
@@ -1986,6 +1730,16 @@ button {
 .table__tr:nth-child(2n-1) {
   background-color: rgba(31, 30, 30, 0.03);
 }
+.table__th {
+  height: 85px;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 25px;
+}
+.table__footer-th {
+  height: 60px;
+  font-size: 0;
+}
 .table__th,
 .table__footer-th {
   -webkit-box-sizing: border-box;
@@ -2002,16 +1756,6 @@ button {
 .table__footer-th:last-child {
   border-right: none;
   padding-right: 0;
-}
-.table__th {
-  height: 85px;
-  font-weight: 600;
-  font-size: 18px;
-  line-height: 1.35;
-}
-.table__footer-th {
-  height: 60px;
-  font-size: 0;
 }
 .table__body-th {
   -webkit-box-sizing: border-box;
@@ -2063,44 +1807,6 @@ button {
   -webkit-transform: rotate(45deg);
       -ms-transform: rotate(45deg);
           transform: rotate(45deg);
-}
-.container-content {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  width: 100%;
-  max-width: 1414px;
-  margin: 0 auto;
-  margin-bottom: 100px;
-  padding-left: 40px;
-  padding-right: 40px;
-}
-.container-content .article {
-  padding: 40px 0 150px;
-}
-.container-content .article__container {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  width: 100%;
-  max-width: 1414px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 40px;
-  padding-right: 40px;
-}
-.container-content .article__content {
-  max-width: 830px;
-}
-.title {
-  margin: 0 0 80px;
-  width: auto;
-  max-width: 1414px;
-  background-color: transparent;
-  color: #1f1e1e;
-  font-family: "Lora", serif;
-  font-weight: 500;
-  font-size: 70px;
-  line-height: 90px;
-  text-align: center;
 }
 .content {
   color: #1f1e1e;
@@ -2210,7 +1916,7 @@ button {
           box-sizing: border-box;
   display: inline-block;
   min-width: 20px;
-  color: #1f1e1e;
+  color: #bc3324;
   white-space: pre;
 }
 .content ul > li,
@@ -2739,18 +2445,6 @@ button {
   top: 25px;
 }
 @media (max-width: 1659px) {
-  body {
-    padding-top: 111px;
-  }
-  .width_624 {
-    max-width: 604px;
-  }
-  .section-title {
-    max-width: 604px;
-  }
-  .section-title {
-    margin-bottom: 130px;
-  }
   .event-card__title {
     margin: 0 0 10px;
   }
@@ -2790,18 +2484,6 @@ button {
   }
 }
 @media (max-width: 1339px) {
-  .width_624 {
-    max-width: 566px;
-  }
-  .section-title {
-    max-width: 566px;
-  }
-  .section-title {
-    min-height: 52px;
-    margin-bottom: 100px;
-    padding: 11px 40px;
-    font-size: 24px;
-  }
   .title {
     margin-bottom: 60px;
     font-size: 40px;
@@ -2812,40 +2494,12 @@ button {
     font-size: 20px;
     line-height: 27px;
   }
-  .listing {
-    padding-left: 30px;
-    padding-right: 30px;
-  }
   .listing__events-list {
     margin: 0 -15px -100px;
   }
   .listing__event-card {
     width: calc(33.3333% - 30px);
     margin: 0 15px 100px;
-  }
-  .reserve {
-    gap: 65px 6.5%;
-    grid-template-columns: 340px calc(93.5% - 340px);
-  }
-  .event__container {
-    padding-left: 30px;
-    padding-right: 30px;
-  }
-  .event__header {
-    padding-left: 30px;
-    padding-right: 30px;
-  }
-  .about__container {
-    padding-left: 30px;
-    padding-right: 30px;
-  }
-  .contacts__container {
-    padding-left: 30px;
-    padding-right: 30px;
-  }
-  .contacts-events__container {
-    padding-left: 30px;
-    padding-right: 30px;
   }
   .upcoming__title {
     margin-top: 100px;
@@ -2856,38 +2510,14 @@ button {
   .upcoming__slider {
     gap: 96px;
   }
-  .upcoming__container {
-    padding-left: 30px;
-    padding-right: 30px;
-  }
   .bgc {
     height: 1170px;
-  }
-  .breadcrumbs {
-    padding-left: 30px;
-    padding-right: 30px;
-  }
-  .offers__container {
-    padding-left: 30px;
-    padding-right: 30px;
   }
   .offers__btn:first-child {
     margin-right: 94px;
   }
-  .tariff__container {
-    padding-left: 30px;
-    padding-right: 30px;
-  }
-  .container-content .article__container {
-    padding-left: 30px;
-    padding-right: 30px;
-  }
   .page-footer {
     padding-bottom: 65px;
-  }
-  .page-footer__container {
-    padding-left: 30px;
-    padding-right: 30px;
   }
   .page-footer__milenials,
   .page-footer__confidence,
@@ -2897,10 +2527,6 @@ button {
   }
   .page-footer__form {
     width: 388px;
-  }
-  .page-header__container {
-    padding-left: 30px;
-    padding-right: 30px;
   }
 }
 @media (max-width: 1169px) {
@@ -2980,11 +2606,6 @@ button {
   }
   .listing__article-card::before {
     margin: 0 auto 50px;
-  }
-  .reserve {
-    gap: 60px;
-    grid-template-columns: auto 390px;
-    grid-template-areas: "scheme scheme" "checks legend" "checks order";
   }
   .article-card {
     -webkit-box-orient: vertical;
@@ -3171,15 +2792,6 @@ button {
   }
 }
 @media (max-width: 767px) {
-  body {
-    padding-top: 70px;
-  }
-  .section-title {
-    min-height: 42px;
-    margin-bottom: 80px;
-    padding: 11px 20px;
-    font-size: 20px;
-  }
   .title {
     margin-bottom: 40px;
     font-size: 20px;
@@ -3190,27 +2802,11 @@ button {
     font-size: 16px;
     line-height: 22px;
   }
-  .listing {
-    padding-left: 20px;
-    padding-right: 20px;
-  }
   .listing__events-list {
     margin: 0 -10px -80px;
   }
   .listing__event-card {
     margin: 0 10px 80px;
-  }
-  .reserve {
-    grid-template-columns: 100%;
-    grid-template-areas: "scheme" "legend" "checks" "order";
-  }
-  .event__container {
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-  .event__header {
-    padding-left: 20px;
-    padding-right: 20px;
   }
   .event__about {
     -ms-flex-wrap: wrap;
@@ -3237,18 +2833,6 @@ button {
             order: -1;
     margin-bottom: 40px;
   }
-  .about__container {
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-  .contacts__container {
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-  .contacts-events__container {
-    padding-left: 20px;
-    padding-right: 20px;
-  }
   .upcoming {
     padding: 30px 0 29px 0;
   }
@@ -3267,134 +2851,11 @@ button {
   .upcoming__center {
     width: 60.5px;
   }
-  .upcoming__container {
-    padding-left: 20px;
-    padding-right: 20px;
-  }
   .bgc {
     height: 928px;
   }
   .breadcrumbs {
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-  .breadcrumbs {
     display: none;
-  }
-  .offers__container {
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-  .tariff__container {
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-  .table {
-    display: block;
-  }
-  .table__head,
-  .table__body,
-  .table__footer {
-    display: block;
-    margin: 0 -20px;
-  }
-  .table__head-tr {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
-  .table__tr {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-  }
-  .table__tr:nth-child(2n-1) {
-    background-color: transparent;
-  }
-  .table__th,
-  .table__footer-th {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    height: auto;
-    width: 33.3333%;
-    padding-top: 20px;
-    padding-bottom: 20px;
-  }
-  .table__th:first-child,
-  .table__footer-th:first-child {
-    display: none;
-  }
-  .table__th:last-child,
-  .table__footer-th:last-child {
-    padding-right: 10px;
-  }
-  .table__th:nth-child(2),
-  .table__footer-th:nth-child(2) {
-    padding-left: 10px;
-  }
-  .table__th:nth-child(2n-1),
-  .table__footer-th:nth-child(2n-1) {
-    background-color: rgba(31, 30, 30, 0.03);
-  }
-  .table__th {
-    font-size: 14px;
-  }
-  .table__footer-th {
-    font-size: 14px;
-    line-height: 1.35;
-    color: #6C6C6C;
-    font-weight: 300;
-  }
-  .table__body-th {
-    text-align: center;
-    display: block;
-    height: auto;
-    min-height: 50px;
-    width: 100%;
-    padding: 15px 10px;
-    font-weight: 600;
-    background-color: rgba(31, 30, 30, 0.03);
-  }
-  .table__td {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    width: 33.3333%;
-    height: auto;
-    min-height: 50px;
-    border: none;
-    border-right: 1px solid #bfbfbf;
-  }
-  .table__td:last-child {
-    padding-right: 10px;
-  }
-  .table__td:nth-child(2n-1) {
-    background-color: rgba(31, 30, 30, 0.03);
-  }
-  .table__footer-tr {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    border-top: 1px solid #bfbfbf;
-  }
-  .container-content .article__container {
-    padding-left: 20px;
-    padding-right: 20px;
   }
   .main-header__title,
   .main-header__text {
@@ -3402,10 +2863,6 @@ button {
   }
   .page-footer {
     padding-bottom: 50px;
-  }
-  .page-footer__container {
-    padding-left: 20px;
-    padding-right: 20px;
   }
   .page-footer__wrapper {
     -webkit-box-orient: vertical;
@@ -3450,10 +2907,6 @@ button {
   }
   .page-header {
     height: 70px;
-  }
-  .page-header__container {
-    padding-left: 20px;
-    padding-right: 20px;
   }
   .page-header__container {
     padding-left: 0;
@@ -3545,9 +2998,6 @@ button {
   }
 }
 @media (max-width: 599px) {
-  .section-title {
-    font-size: 16px;
-  }
   .listing__link {
     margin-top: 50px;
     font-size: 14px;
